update the all vendors and swagger
